添加validator输入验证及测试

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "array"
   ],
   "author": "ruanjiayou",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "moment": "^2.20.1"
+  }
 }
