--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utils",
+  "name": "utils2",
   "version": "1.0.0",
   "description": "validator,_,IO,string,date,numer,array",
   "main": "index.js",
